--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- sol seçim ekranı sonu -->
       
         <!-- sağ seçim ekranı -->
-        <div class="box left">
+        <div class="box right">
           <a href="#"
             ><h1>Tüp Siparişi Ver</h1>
             <img src="img/tup.png" alt=""
