--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="box left"> 
           <a href="#"
             ><h1>Su Siparişi Ver</h1>
-            <img src="img/damacana.png" alt=""
+            <img src="img/damacana.png" alt="damacana su png"
           /></a>
         </div>
         <!-- sol seçim ekranı sonu -->
@@ -22,7 +22,7 @@
         <div class="box right">
           <a href="#"
             ><h1>Tüp Siparişi Ver</h1>
-            <img src="img/tup.png" alt=""
+            <img src="img/tup.png" alt="mutfak tüpü 12kg png"
           /></a>
         </div>
         <!-- sağ seçim ekranı sonu -->
