genel düzenleme ve sipariş sayfalarının eklenmesi

--- a/index.html
+++ b/index.html
@@ -3,29 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />  <!-- css dosyasını çağırdık-->
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- css dosyasını çağırdık-->
     <title>Tüp Su</title>
   </head>
   <body>
     <!-- kapsayıcı div başlangıç -->
-    <div class="container">  
-        <!-- sol seçim ekranı -->
-        <div class="box left"> 
-          <a href="#"
-            ><h1>Su Siparişi Ver</h1>
-            <img src="img/damacana.png" alt="damacana su png"
-          /></a>
-        </div>
-        <!-- sol seçim ekranı sonu -->
-      
-        <!-- sağ seçim ekranı -->
-        <div class="box right">
-          <a href="#"
-            ><h1>Tüp Siparişi Ver</h1>
-            <img src="img/tup.png" alt="mutfak tüpü 12kg png"
-          /></a>
-        </div>
-        <!-- sağ seçim ekranı sonu -->
+    <div class="container">
+      <!-- sol seçim ekranı -->
+      <div class="box left">
+        <a href="/siparis/su-siparis.html"
+          ><h1>Su Siparişi Ver</h1>
+          <img src="img/damacana.png" alt="damacana su png"
+        /></a>
+      </div>
+      <!-- sol seçim ekranı sonu -->
+
+      <!-- sağ seçim ekranı -->
+      <div class="box right">
+        <a href="/siparis/tup-siparis.html"
+          ><h1>Tüp Siparişi Ver</h1>
+          <img src="img/tup.png" alt="mutfak tüpü 12kg png"
+        /></a>
+      </div>
+      <!-- sağ seçim ekranı sonu -->
     </div>
     <!-- container bitiş -->
   </body>
